# university-app

./: .env  .gitignore  Dockerfile  env.py  main.py  pyproject.toml
database/: db.py
templates/: index.html
templates/exception_handler/: 400.html  404.html  500.html
templates/sends/: index_sends.html
templates/tasks/: add_tasks.html  index_tasks.html  update_tasks.html
templates/users/: add_user.html  index_users.html  update_user.html
utils/: translations.py  util.py
